<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcomeback"
    tools:context=".WelcomeActivity">
    <TextView
        android:id="@+id/top_text"
        android:layout_width="381dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/introduction_text"
        android:textColor="#FFFEFE"
        android:textSize="15sp"
        android:ellipsize="marquee"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:singleLine="true"
        android:marqueeRepeatLimit="marquee_forever"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_text"
        android:layout_width="147dp"
        android:layout_height="46dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="36dp"
        android:text="@string/game_title"
        android:typeface="monospace"
        android:textAlignment="center"
        android:textColor="#FBF7F8"
        android:textSize="27sp"
        app:layout_constraintBottom_toTopOf="@+id/button_rule"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_rule"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#8509FF"
        android:text="@string/rule_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_easymode"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#8C17FF"
        android:text="@string/easy_mode_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_rule" />

    <Button
        android:id="@+id/button_advancemode"
        android:layout_width="114dp"
        android:layout_height="52dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:backgroundTint="#8C17FF"
        android:text="@string/advance_mode_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_easymode" />

</androidx.constraintlayout.widget.ConstraintLayout>